--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,12 @@
 .App-link {
   color: #61dafb;
 }
+
+.container {
+  width: 1170px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  
+}
