--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,12 +1,25 @@
 nav {
-	background-color: rgba(32,32,32,0.8);
+	background: 0;
 	margin: 0 auto;
-	display: grid;
-	grid-template-columns: 1fr 2fr;
+	padding: 20px 0;
 	color: white;
 	position: fixed;
 	top: 0;
 	width: 100%;
+	-webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        transition: background .5s ease-in-out,padding .5s ease-in-out;
+}
+
+nav.collapse {
+	background-color: rgba(32,32,32,.9);
+	padding: 0;
+	border-bottom: 2px solid white;
+}
+
+nav .container {
+	display: grid;
+	grid-template-columns: 1fr 2fr;
 }
 
 nav ul {
@@ -17,13 +30,23 @@ nav a {
 	color: white;
 	text-decoration: none;
 	text-transform: uppercase;
+	font-size: 15px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	font-family: 'Montserrat',"Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-weight: 700;
 }
 
 .logo {
 	grid-column:  1;
+	text-align: left;
+	height: 60px;
+	padding: 8.5px 0 20.5px;
+	margin-left: 15px;
+	line-height: 21px;
 }
 
-.navBar {
+.navbarLinks {
 	grid-column: 2;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
@@ -40,11 +63,11 @@ nav a {
 		font-size: 36px;
 	}
 
-	.navBar {
+	.navbarLinks {
 		display: none;
 	}
 
-	#navToggle:checked ~ .navBar {
+	#navToggle:checked ~ .navbarLinks {
 		display: grid;
 		grid-row: 2;
 	}
