--- a/src/Nav.css
+++ b/src/Nav.css
@@ -7,8 +7,8 @@ nav {
 	top: 0;
 	width: 100%;
 	-webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        transition: background .5s ease-in-out,padding .5s ease-in-out;
+  -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+  transition: background .5s ease-in-out,padding .5s ease-in-out;
 }
 
 nav.collapse {
@@ -27,14 +27,19 @@ nav ul {
 }
 
 nav a {
+	display: block;
 	color: white;
 	text-decoration: none;
 	text-transform: uppercase;
 	font-size: 15px;
+	line-height: 21px;
 	letter-spacing: 1px;
-	text-transform: uppercase;
 	font-family: 'Montserrat',"Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-weight: 700;
+	padding: 19.5px 15px;
+	-webkit-transition: background .3s ease-in-out;
+  -moz-transition: background .3s ease-in-out;
+  transition: background .3s ease-in-out;
 }
 
 .logo {
@@ -48,9 +53,17 @@ nav a {
 
 .navbarLinks {
 	grid-column: 2;
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-gap:  10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0 0;
+}
+
+.navbarLinks a:hover,
+.navbarLinks a:focus,
+.navbarLinks a:active {
+	background-color: rgba(252,252,252,.7);
+   color: #222;
 }
 
 #navToggle, .burgerMenu {
