--- a/src/App.css
+++ b/src/App.css
@@ -25,5 +25,27 @@
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
-  
+}
+
+h1, h2 {
+  margin: 3em 0 35px;
+  text-transform: uppercase;
+  font-family: 'Montserrat',"Helvetica Neue",Helvetica,Arial,sans-serif;
+  letter-spacing: 1px;
+  font-weight: 400;
+  font-size: 32px;
+}
+
+h2 svg {
+  margin-right: 10px;
+}
+
+section {
+  padding: 7em 1em;
+}
+
+section p {
+  text-align: left;
+  font-size: 20px;
+  line-height: 1.6;
 }
