--- a/src/Header.css
+++ b/src/Header.css
@@ -11,11 +11,7 @@ header {
 }
 
 h1 {
-	margin: 30vh 0 35px;
-  text-transform: uppercase;
-  font-family: 'Montserrat',"Helvetica Neue",Helvetica,Arial,sans-serif;
-  letter-spacing: 1px;
-  font-weight: 400;
+	margin-top: 30vh;
   font-size: 39px;
 }
 
@@ -34,7 +30,8 @@ header a {
 }
 
 #dlcv {
-  padding: 10px 30px;
+  margin-top: 50px;
+  padding: 10px 35px;
 }
 
 #godown {
